[kotlin] remove support for `ws.kts` and refactor scratch file handling
#KTIJ-35160 #KTIJ-31408

GitOrigin-RevId: 06228fb7e6e3746d2d659c0d7d013cdda4236de6