@@ -8,7 +8,6 @@ import com.intellij.openapi.fileEditor.FileDocumentManager
 import com.intellij.openapi.module.Module
 import com.intellij.openapi.module.ModuleUtilCore
 import com.intellij.openapi.project.Project
-import com.intellij.openapi.projectRoots.JavaSdkVersion
 import com.intellij.openapi.util.io.FileUtilRt
 import com.intellij.openapi.vfs.VirtualFile
 import com.intellij.openapi.vfs.findDocument
@@ -31,25 +30,17 @@ import org.jetbrains.kotlin.idea.jvm.shared.scratch.output.ExplainInfo
 import org.jetbrains.kotlin.idea.jvm.shared.scratch.output.ScratchOutput
 import org.jetbrains.kotlin.idea.jvm.shared.scratch.output.ScratchOutputType
 import org.jetbrains.kotlin.idea.util.JavaParametersBuilder
-import org.jetbrains.kotlin.idea.util.application.isUnitTestMode
-import org.jetbrains.kotlin.idea.util.projectStructure.version
 import java.io.File
+import java.nio.file.Files
 import java.nio.file.Path
 import kotlin.io.path.absolutePathString
 import kotlin.io.path.readLines
 
-class K2ScratchExecutor(override val file: K2KotlinScratchFile, val project: Project, val scope: CoroutineScope) : ScratchExecutor(file) {
-    private data class CompilationResult(
-        val code: Int,
-        val stdout: String,
-        val stderr: String,
-    )
-
+class K2ScratchExecutor(override val scratchFile: K2KotlinScratchFile, val project: Project, val scope: CoroutineScope) : ScratchExecutor(scratchFile) {
     override fun execute() {
-        handler.onStart(file)
+        handler.onStart(scratchFile)
 
-        val scriptFile = file.file
-        val module = file.module
+        val scriptFile = scratchFile.virtualFile
 
         scope.launch {
             val document = readAction { scriptFile.findDocument() }
@@ -63,7 +54,7 @@ class K2ScratchExecutor(override val file: K2KotlinScratchFile, val project: Pro
             val (code, stdout, stderr) = withBackgroundProgress(
                 project, title = KotlinJvmBundle.message("progress.title.compiling.kotlin.scratch")
             ) {
-                val process = getJavaCommandLine(file.file, module).createProcess()
+                val process = getJavaCommandLine(scratchFile.virtualFile, scratchFile.module).createProcess()
                 process.awaitExit()
                 val stdout = withContext(Dispatchers.IO) {
                     process.inputStream.bufferedReader().use { it.readText() }
@@ -75,11 +66,11 @@ class K2ScratchExecutor(override val file: K2KotlinScratchFile, val project: Pro
                 CompilationResult(process.exitValue(), stdout, stderr)
             }
 
-            if (code != 0 && !file.options.isInteractiveMode) {
-                handler.error(file, "Compilation failed: ${stderr}")
+            if (code != 0 && !scratchFile.options.isInteractiveMode) {
+                handler.error(scratchFile, "Compilation failed: $stderr")
             } else if (code == 0) {
                 if (stdout.isNotEmpty()) {
-                    handler.handle(file, ScratchOutput(stdout, ScratchOutputType.OUTPUT))
+                    handler.handle(scratchFile, ScratchOutput(stdout, ScratchOutputType.OUTPUT))
                 }
 
                 runCatching {
@@ -95,62 +86,33 @@ class K2ScratchExecutor(override val file: K2KotlinScratchFile, val project: Pro
                                 .toInt()
 
                         ExplainInfo(
-                            key.substring(0, leftBracketIndex), offsets, value, file.getPsiFile()?.getLineNumber(offsets.second)
+                            key.substring(0, leftBracketIndex), offsets, value, scratchFile.getPsiFile()?.getLineNumber(offsets.second)
                         )
                     }
 
-                    handler.handle(file, explanations, scope)
+                    handler.handle(scratchFile, explanations, scope)
                 }.onFailure {
-                    handler.error(file, it.message ?: "Unknown error")
+                    handler.error(scratchFile, it.message ?: "Unknown error")
                 }
             }
 
-            handler.onFinish(file)
+            handler.onFinish(scratchFile)
         }
     }
 
     private fun getJavaCommandLine(scriptVirtualFile: VirtualFile, module: Module?): GeneralCommandLine {
-        val javaParameters =
-            JavaParametersBuilder(project).withSdkFrom(module ?: ModuleUtilCore.findModuleForFile(scriptVirtualFile, project), true)
-                .withMainClassName("org.jetbrains.kotlin.preloading.Preloader").build()
+        val javaParameters = JavaParametersBuilder(project)
+            .withSdkFrom(module ?: ModuleUtilCore.findModuleForFile(scriptVirtualFile, project))
+            .withMainClassName("org.jetbrains.kotlin.preloading.Preloader").build()
 
         javaParameters.charset = null
-        with(javaParameters.vmParametersList) {
-            if (isUnitTestMode() && javaParameters.jdk?.version?.isAtLeast(JavaSdkVersion.JDK_1_9) == true) { // TODO: Have to get rid of illegal access to java.util.ResourceBundle.setParent(java.util.ResourceBundle):
-                //  WARNING: Illegal reflective access by com.intellij.util.ReflectionUtil (file:...kotlin-ide/intellij/out/kotlinc-dist/kotlinc/lib/kotlin-compiler.jar) to method java.util.ResourceBundle.setParent(java.util.ResourceBundle)
-                //  WARNING: Please consider reporting this to the maintainers of com.intellij.util.ReflectionUtil
-                //  WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-                //  WARNING: All illegal access operations will be denied in a future release
-                add("--add-opens")
-                add("java.base/java.util=ALL-UNNAMED")
-            }
-            add("-D$KOTLIN_SCRATCH_EXPLAIN_FILE=${scriptVirtualFile.explainFilePath}")
-        }
-
-        val ideScriptingClasses = PathUtil.getJarPathForClass(KotlinScratchScript::class.java)
+        javaParameters.vmParametersList.add("-D$KOTLIN_SCRATCH_EXPLAIN_FILE=${scriptVirtualFile.explainFilePath}")
 
         val classPath = buildSet {
-            this += ideScriptingClasses
-            listOf(
-                KotlinArtifacts.kotlinCompiler,
-                KotlinArtifacts.kotlinStdlib,
-                KotlinArtifacts.kotlinReflect,
-                KotlinArtifacts.kotlinScriptRuntime,
-                KotlinArtifacts.trove4j,
-                KotlinArtifacts.kotlinDaemon,
-                KotlinArtifacts.powerAssertPlugin,
-                KotlinArtifacts.kotlinScriptingCompiler,
-                KotlinArtifacts.kotlinScriptingCompilerImpl,
-                KotlinArtifacts.kotlinScriptingCommon,
-                KotlinArtifacts.kotlinScriptingJvm,
-                KotlinArtifacts.jetbrainsAnnotations
-            ).mapTo(this) { it.toPath().absolutePathString() }
-
-            if (module != null) {
-                addAll(JavaParametersBuilder.getModuleDependencies(module))
-            }
-
-        }.toList()
+            add(ideaScriptingJar)
+            addAll(requiredKotlinArtifacts)
+            if (module != null) addAll(JavaParametersBuilder.getModuleDependencies(module))
+        }
 
         javaParameters.classPath.add(KotlinArtifacts.kotlinPreloader.absolutePath)
         javaParameters.programParametersList.addAll(
@@ -179,6 +141,27 @@ class K2ScratchExecutor(override val file: K2KotlinScratchFile, val project: Pro
         return javaParameters.toCommandLine()
     }
 
+    private val requiredKotlinArtifacts by lazy {
+        listOf(
+            KotlinArtifacts.kotlinCompiler,
+            KotlinArtifacts.kotlinStdlib,
+            KotlinArtifacts.kotlinReflect,
+            KotlinArtifacts.kotlinScriptRuntime,
+            KotlinArtifacts.trove4j,
+            KotlinArtifacts.kotlinDaemon,
+            KotlinArtifacts.powerAssertPlugin,
+            KotlinArtifacts.kotlinScriptingCompiler,
+            KotlinArtifacts.kotlinScriptingCompilerImpl,
+            KotlinArtifacts.kotlinScriptingCommon,
+            KotlinArtifacts.kotlinScriptingJvm,
+            KotlinArtifacts.jetbrainsAnnotations
+        ).map { it.toPath() }.filter {
+            Files.exists(it)
+        }.map { it.absolutePathString() }
+    }
+
+    private val ideaScriptingJar by lazy { PathUtil.getJarPathForClass(KotlinScratchScript::class.java) }
+
     private val explainScratchesDirectory: Path by lazy {
         FileUtilRt.createTempDirectory("kotlin-scratches-explain", null, true).toPath()
     }
@@ -187,6 +170,12 @@ class K2ScratchExecutor(override val file: K2KotlinScratchFile, val project: Pro
         get() = explainScratchesDirectory.resolve(this.name.replace(".kts", ".txt"))
 
     override fun stop() {
-        handler.onFinish(file)
+        handler.onFinish(scratchFile)
     }
+
+    private data class CompilationResult(
+        val code: Int,
+        val stdout: String,
+        val stderr: String,
+    )
 }
